--- a/index.html
+++ b/index.html
@@ -19,18 +19,6 @@
   <!-- Prevent resource optimization from breaking functionality -->
   <meta name="netlify-resource-hints" content="hero-eyeglass.png=critical&product-overview.gif=critical&editedTSonic.mp4=critical">
   
-  <!-- Alternative image loading method using picture tags -->
-  <noscript>
-    <picture>
-      <source srcset="./src/assets/images/hero-eyeglass.png" type="image/png">
-      <img src="./src/assets/images/hero-eyeglass.png" alt="" style="display:none" aria-hidden="true">
-    </picture>
-    <picture>
-      <source srcset="./src/assets/images/product-overview.gif" type="image/gif">
-      <img src="./src/assets/images/product-overview.gif" alt="" style="display:none" aria-hidden="true">
-    </picture>
-  </noscript>
-  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./src/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -2663,5 +2651,17 @@
       setInterval(nextTestimonial, 7000);
     });
   </script>
+
+  <!-- Add noscript content here instead of in head -->
+  <noscript>
+    <picture>
+      <source srcset="./src/assets/images/hero-eyeglass.png" type="image/png">
+      <img src="./src/assets/images/hero-eyeglass.png" alt="" style="display:none" aria-hidden="true">
+    </picture>
+    <picture>
+      <source srcset="./src/assets/images/product-overview.gif" type="image/gif">
+      <img src="./src/assets/images/product-overview.gif" alt="" style="display:none" aria-hidden="true">
+    </picture>
+  </noscript>
 </body>
 </html>
